--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
    <main>
         <header>
-           <h1>Título do site</h1> 
+           <h1>Cursos Grátis</h1> 
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus accusantium voluptatum ut ipsa laudantium laborum delectus libero! Rem corrupti ipsum doloremque animi culpa iure voluptatum quibusdam, maiores officiis sed maxime!</p>
         <article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScrript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta ullam ipsum eius non inventore consectetur eligendi, optio, provident eum quaerat eos, ab repellat harum numquam aperiam corporis delectus necessitatibus dolor.</p>
         <article>
    </main>
 </body>
