--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <img src="imagens/curso-html-css.png" alt="curso de HTML">
+            <img class="Lado" src="imagens/curso-html-css.png" alt="curso de HTML">
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus accusantium voluptatum ut ipsa laudantium laborum delectus libero! Rem corrupti ipsum doloremque animi culpa iure voluptatum quibusdam, maiores officiis sed maxime!</p>
         <article>
         <article>
             <h2>Curso de JavaScrript</h2>
-             <img src="imagens/curso-javascript.png" alt="Curso JS">
+             <img class="Lado" src="imagens/curso-javascript.png" alt="Curso JS">
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta ullam ipsum eius non inventore consectetur eligendi, optio, provident eum quaerat eos, ab repellat harum numquam aperiam corporis delectus necessitatibus dolor.</p>
         <article>
