--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <img class="Lado" src="imagens/curso-html-css.png" alt="curso de HTML">
+            <img class="lado" src="imagens/curso-html-css.png" alt="curso de HTML">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus accusantium voluptatum ut ipsa laudantium laborum delectus libero! Rem corrupti ipsum doloremque animi culpa iure voluptatum quibusdam, maiores officiis sed maxime!</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS. criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML</a></p>
         <article>
         <article>
             <h2>Curso de JavaScrript</h2>
-             <img class="Lado" src="imagens/curso-javascript.png" alt="Curso JS">
+             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
 
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta ullam ipsum eius non inventore consectetur eligendi, optio, provident eum quaerat eos, ab repellat harum numquam aperiam corporis delectus necessitatibus dolor.</p>
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         <article>
    </main>
 </body>
